# fast-fhir

./: .gitignore  BUILD_INSTRUCTIONS.md  BuildInstructions.md  CHANGELOG.md  Makefile  README.md  fix_resources.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: c-cpp.yml  publish.yml  test.yml  ubuntu-compatibility.yml
benchmarks/: COMPARATIVE_RESULTS.md  README.md  __init__.py  benchmark_parser.py  comparative_benchmark.py  direct_comparative_benchmark.py  fhir_resources_benchmark.py  performance_tests.py  simple_comparative_benchmark.py
examples/: README.md  demo_deserializers.py
scripts/: README.md  benchmark_parser.py  generate_methods.py  generate_resources.py  install_deps.sh  publish.py  test_c_build.py  test_config.py  test_license_config.py  test_python_versions.sh  test_ubuntu.py  test_ubuntu_docker.sh
src/: __init__.py
src/fast_fhir/: __init__.py  datatypes.py  fast_parser.py
src/fast_fhir/deserializers/: README.md  __init__.py  deserializers.py  entities_deserializers.py  foundation_deserializers.py  pydantic_entities.py  pydantic_foundation.py
src/fast_fhir/ext/: .clang-format  .clang-tidy  CMakeLists.txt  Makefile  README.md  fhir_datatypes.c  fhir_datatypes.h  fhir_foundation.c  fhir_foundation.h  fhir_foundation_python.c  fhir_new_resources_python.c
src/fast_fhir/ext/common/: fhir_common.c  fhir_common.h  fhir_resource_base.c  fhir_resource_base.h
src/fast_fhir/ext/resources/: fhir_biologically_derived_product.h  fhir_careplan.c  fhir_careplan.h  fhir_careteam.h  fhir_device_metric.c  fhir_device_metric.h  fhir_encounter.c  fhir_encounter.h  fhir_goal.h  fhir_location.c  fhir_location.h  fhir_nutritionorder.h  fhir_observation.c  fhir_observation.h  fhir_organization.c  fhir_organization.h  fhir_organization_affiliation.c  fhir_organization_affiliation.h  fhir_patient.c  fhir_patient.h  fhir_practitioner.c  fhir_practitioner.h  fhir_practitionerrole.c  fhir_practitionerrole.h  fhir_riskassessment.c  fhir_riskassessment.h  fhir_servicerequest.h  fhir_visionprescription.h
src/fast_fhir/ext/tests/: test_care_provision.c  test_common.c  test_framework.c  test_framework.h  test_oop_system.c  test_practitionerrole.c
src/fast_fhir/resources/: appointment_response.py  base.py  biologically_derived_product.py  device_metric.py  encounter_history.py  episode_of_care.py  list_resource.py  nutrition_product.py  observation.py  organization_affiliation.py  transport.py  verification_result.py
tests/: README.md  test_additional_resources.py  test_all_resources.py  test_care_provision.c  test_care_provision_resources.py  test_common.c  test_core_functionality.py  test_datatypes.py  test_deserializers.py  test_entities_deserializers.py  test_fast_parser.py  test_fhir_parser.py  test_foundation.py  test_foundation_deserializers.py  test_framework.c  test_framework.h  test_main.py  test_new_resources.py  test_oop_system.c  test_patient.c  test_practitionerrole.c  test_resources.py  test_terminology.py
