[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-fhir"
version = "0.1.0"
description = "Lightning-fast FHIR R5 parser with C extensions - 100x faster JSON parsing for healthcare data"
authors = [{name = "Archit Kapoor"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pkgconfig>=1.5.0",
    "pydantic>=2.0.0",
]
keywords = ["fhir", "parser", "healthcare", "hl7", "json", "performance", "fast", "c-extensions", "medical", "interoperability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.urls]
Homepage = "https://github.com/archit47/fast-fhir"
Repository = "https://github.com/archit47/fast-fhir"
Documentation = "https://github.com/archit47/fast-fhir#readme"
"Bug Tracker" = "https://github.com/archit47/fast-fhir/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "build>=0.8.0",
    "twine>=4.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]